# my-python-setup

./: .README.md.swp  .coverage  .flake8  .gitignore  .python-version  README.md  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/my_python_setup/: .console.py.swo  .console.py.swp  :w  __init__.py  console.py  wikipedia.py
src/my_python_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
