[tool.poetry]
name = "my-python-setup"
version = "0.1.0"
description = "My Python Setup"
authors = ["Austin Kenny <austin_kenny@pobox.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/aibistin/my-python-setup"
repository = "https://github.com/aibistin/my-python-setup"
keywords = ["setup"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
my-python-setup = "my_python_setup.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["my_python_setup"]

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

