[tool.poetry]
name = "my-python-setup"
version = "0.1.0"
description = "My Python Setup"
authors = ["Austin Kenny <austin_kenny@pobox.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/aibistin/my-python-setup"
repository = "https://github.com/aibistin/my-python-setup"
keywords = ["setup"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"
desert = "^2020.1.6"
marshmallow = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.780"
pytype = {version = "^2020.6.1", python = "3.7"}
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"
xdoctest = "^0.12.0"
sphinx = "^3.1.1"
sphinx-autodoc-typehints = "^1.10.3"

[tool.poetry.scripts]
my-python-setup = "my_python_setup.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["my_python_setup"]

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
